# pkg/handler/commit_request_response.go
@@ -166,7 +166,6 @@ func GetCommitReleasedRequest(r *http.Request) (req model.CommitReleasedRequest,
 func GetCommitByAuthorRequest(r *http.Request) (req model.GetCommitByAuthorRequest, errMessage string) {
 	vars := mux.Vars(r)
 	author := r.URL.Query().Get("author")
-	token := r.URL.Query().Get("token") // Personal Access Token is optional
 
 	if author == "" {
 		errMessage = "Author parameter is required"
@@ -174,10 +173,9 @@ func GetCommitByAuthorRequest(r *http.Request) (req model.GetCommitByAuthorReque
 	}
 
 	req = model.GetCommitByAuthorRequest{
-		Owner:               vars["owner"],
-		Repository:          vars["repo"],
-		Author:              author,
-		PersonalAccessToken: token, // This can be an empty string if not provided
+		Owner:      vars["owner"],
+		Repository: vars["repo"],
+		Author:     author,
 	}
 	return
 }
