# pkg/model/commit.go
@@ -79,8 +79,7 @@ type CommitReleasedResponse struct {
 }
 
 type GetCommitByAuthorRequest struct {
-	Owner               string
-	Repository          string
-	Author              string
-	PersonalAccessToken string // Optional field for GitHub API authentication
+	Owner      string
+	Repository string
+	Author     string
 }
